--- a/ALLProject/pos/static/css/sales_page.css
+++ b/ALLProject/pos/static/css/sales_page.css
@@ -167,3 +167,7 @@ h2,h3{
     background-color: #FFF;
     box-shadow: -2px 2px 8px 0px rgba(0, 0, 0, 0.3);
 }
+
+#item_code_form {
+    text-align: -webkit-center;
+}
