--- a/ALLProject/pos/templates/pos/navigation.html
+++ b/ALLProject/pos/templates/pos/navigation.html
@@ -4,7 +4,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mukta+Mahee:wght@200;300;400;500;600;700;800&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 
-<link rel = "stylesheet" href="{% static "css/navigation.css" %}">
+<link rel = "stylesheet" href="{% static "css/cashier/navigation.css" %}">
 <div class="navigation-column" id="navcolumn">
     <!-- Cashier View -->
     <a class="nav sale"><img src="{% static "assets/shipping.png" %}" class="logo sale"><p class="navfull sale"> Sale</p></a>
