--- a/ALLProject/static/css/user_list copy.css
+++ b/ALLProject/static/css/user_list copy.css
@@ -92,11 +92,9 @@ h4 {
     list-style: none;
     background: #FFF;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    display: flex;
-    justify-content: center;
 }
 
-.dropdown-content li {
+.dropdown-content a {
     color: black;
     text-decoration: none;
     display: block;
@@ -107,13 +105,6 @@ h4 {
     font-family: "Mukta Mahee", sans-serif;
     font-weight: 300;
     font-style: normal;
-    width: 100%;
-}
-
-.dropdown-content ul {
-    padding: 0;
-    list-style-type: none;
-    width: 100%;
 }
   
 .dropdown-content li {
@@ -197,24 +188,20 @@ h4 {
     background: #adb3a7;
 }
 
-#userinfo-box {
+.adduser-box {
     position: absolute;
-    top: 12vh;
+    top: 10vh;
     right: 1%;
+    visibility: hidden;
 
     width: 30%;
     height: 85%;
     background-color: #FFF;
-    border-radius: 15px;
-    box-shadow: 0px 5px 8px #828282;
+    box-shadow: -8px 8px 0px 0px rgba(0,0,0,0.3);
     
     font-family: "Mukta Mahee", sans-serif;
     font-weight: 600;
     font-style: normal;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 #close {
@@ -238,12 +225,17 @@ h4 {
     background-color: #D9D9D9;
 }
 
-.title {    
+.addUser.title {
+    position: absolute;
+    top: 2%;
+    left: 40%;
+    margin: 0;
+    width: fit-content;
+    height: fit-content;
+    
     font-family: "Mukta Mahee", sans-serif;
     font-weight: 800;
     font-style: normal;
-
-    text-align: center;
 }
 
 form.addUser {
@@ -362,55 +354,4 @@ input.addUser {
 .editBtn.del:hover {
     color: #FFF;
     background: rgba(232, 101, 106, 1);
-}
-
-#actual-info {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-#actual-info form{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.form-input {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.form-control {
-    border: none;
-    background-color: #f8ece4;
-    border-radius: 3px;
-    width: 25vw;
-    height: 5vh;
-    margin-bottom: 2vh;
-}
-
-.form-label {
-    font-size: 20px;
-}
-
-#actual-info button {
-    width: 50%;
-    height: 8%;
-    background: #C3B299;
-    border-radius: 20px;
-    font-family: "Mukta Mahee", sans-serif;
-    font-weight: 800;
-    font-size: 1vw;
-    font-style: normal;
-    margin-bottom: 5vh;
-}
-
-#actual-info button:hover {
-    color: #FFF;
-    background: #815355;
 }
