--- a/ALLProject/reports/static/css/best_product.css
+++ b/ALLProject/reports/static/css/best_product.css
@@ -1,4 +1,49 @@
 .container.product {
     display: flex;
     top: 142vh;
+    padding-bottom: 4em;
+}
+
+#best-product {
+    width: 95.5%;
+    height: 100%;
+    border-radius: 20px;
+    background-color: rgb(255, 255, 245);
+}
+
+#show-product {
+    display: flex;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    justify-self: center;
+
+    margin: 0;
+    padding-left: 0.5em;
+
+    width: 96%;
+    height: 80%
+}
+
+.show-product {
+    width: 20%;
+    height: 100%;
+    margin-right: 2%;
+    justify-items: center;   
+}
+
+.product-img-box {
+    aspect-ratio: 1 / 1;
+    margin-top: 8%;
+    height: 70%;
+    background-color: #D9D9D9;
+    overflow: hidden;
+}
+.product-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.product-details {
+    margin: 0.5em;
 }
