--- a/ALLProject/reports/static/css/sales.css
+++ b/ALLProject/reports/static/css/sales.css
@@ -92,41 +92,8 @@ h1 {
     }
 }
 
-.best-product {
+.prints.best-product {
     position: absolute;
     top: 3%;
     left: 35%;
 }
-
-#best-product {
-    width: 95.5%;
-    height: 100%;
-    border-radius: 20px;
-    background-color: rgb(255, 255, 245);
-}
-
-ul {
-    display: flex;
-    margin: 0;
-    padding-left: 0.5em;
-    padding-left: 2em;
-    height: 80%
-}
-
-.show-product {
-    width: 20%;
-    height: 100%;
-    justify-items: center;   
-}
-
-.product-img {
-    aspect-ratio: 1 / 1;
-    margin-top: 8%;
-    height: 70%;
-    background-color: #D9D9D9;
-}
-
-.product-details {
-    margin: 0.5em;
-}
-
