--- a/ALLProject/reports/static/css/sales_transactions.css
+++ b/ALLProject/reports/static/css/sales_transactions.css
@@ -1,4 +1,3 @@
-
 #transaction-box {
     position: absolute;
     top: 12vh;
@@ -95,4 +94,8 @@ table.transac-table {
     width: 100%;
     overflow: hidden;
     text-align: center;
+}
+
+tbody.transac-table {
+    font-family: monospace;
 }
