--- a/ALLProject/static/css/manager/navigation.css
+++ b/ALLProject/static/css/manager/navigation.css
@@ -7,7 +7,7 @@ body html {
     justify-content: center;
     text-align: center;
     
-    position: relative;
+    position: fixed;
     overflow: hidden;
 
     width: 3.5em;
