--- a/ALLProject/reports/static/css/sales_category.css
+++ b/ALLProject/reports/static/css/sales_category.css
@@ -1,4 +1,3 @@
-
 #category-box {
     position: absolute;
     top: 50vh;
@@ -9,4 +8,15 @@
 
     background-color: rgb(255, 255, 245);
     border-radius: 20px;
+    overflow: hidden;
+}
+
+#category-title {
+    position: absolute;
+    z-index: 1;
+}
+
+#chartContainer {
+    position: absolute;
+    top: 0;
 }
