--- a/ALLProject/reports/static/css/sales_chart.css
+++ b/ALLProject/reports/static/css/sales_chart.css
@@ -22,21 +22,13 @@
     height: 80%;
 }
 
-#sales-box tbody td{
-    color: gray;
-}
-
 #sales-box tr {
     padding: 1%;
 }
 
-#sales-box td.july {
-    background-color: #523249 !important;
-}
-
 #sales-box td {
     border-radius: 20px;
-    background-color: #D9D9D9;
+    background-color: darkseagreen;
     font-family: "Mukta Mahee", sans-serif;
     font-weight: 150;
     font-style: normal;
