--- a/ALLProject/reports/templates/reports/partials/sales_chart.html
+++ b/ALLProject/reports/templates/reports/partials/sales_chart.html
@@ -8,62 +8,66 @@
 
         <table class="charts-css column hide-data show-labels">
             <!--January-->
-            <tr style="--size: 0.2">
+            <tr style="--size: {{ all_monthly_sales.0 }}">
                 <th scope="row"> Jan </th>
-                <td class="january"><span class="data"> $ 20K </span></td>
+                {% if all_monthly_sales.0.highlight %}
+                    <td class="january"></td>
+                {% else %}
+                    <td class="january"><span class="data"></span></td>
+                {% endif %}
             </tr>
             <!--February-->
-            <tr style="--size: 0.6">
+            <tr style="--size: {{ all_monthly_sales.1 }}">
                 <th scope="row"> Feb </th>
-                <td class="february"><span class="data"> $ 60K </span></td>
+                <td class="february"><span class="data"></span></td>
             </tr>
             <!--March-->
-            <tr style="--size: 0.3">
+            <tr style="--size: {{ all_monthly_sales.2 }}">
                 <th scope="row"> Mar </th>
                 <td class="march"><span class="data"> $ 30K </span></td>
             </tr>
             <!--April-->
-            <tr style="--size: 0.5">
+            <tr style="--size: {{ all_monthly_sales.3 }}">
                 <th scope="row"> Apr </th>
                 <td class="april"><span class="data"> $ 50K </span></td>
             </tr>
             <!--May-->
-            <tr style="--size: 0.2">
+            <tr style="--size: {{ all_monthly_sales.4 }}">
             <th scope="row"> May </th>
                 <td class="may"><span class="data"> $ 20K </span></td>
             </tr>
             <!--June-->
-            <tr style="--size: 0.1">
+            <tr style="--size: {{ all_monthly_sales.5 }}">
                 <th scope="row"> Jun </th>
                 <td class="june"><span class="data"> $ 10K </span></td>
             </tr>
             <!--July-->
-            <tr style="--size: 0.4">
+            <tr style="--size: {{ all_monthly_sales.6 }}">
                 <th scope="row"> Jul </th>
                 <td class="july"><span class="data"> $ 40K </span></td>
             </tr>
             <!--August-->
-            <tr style="--size: 0.8">
+            <tr style="--size: {{ all_monthly_sales.7 }}">
                 <th scope="row"> Aug </th>
                 <td class="august"><span class="data"> $ 80K </span></td>
             </tr>
             <!--September-->
-            <tr style="--size: 0.65">
+            <tr style="--size: {{ all_monthly_sales.8 }}">
                 <th scope="row"> Sep </th>
                 <td class="september"><span class="data"> $ 65K </span></td>
             </tr>
             <!--October-->
-            <tr style="--size: 0.4">
+            <tr style="--size: {{ all_monthly_sales.9 }}">
                 <th scope="row"> Oct </th>
                 <td class="october"><span class="data"> $ 40K </span></td>
             </tr>
             <!--November-->
-            <tr style="--size: 0.3">
+            <tr style="--size: {{ all_monthly_sales.10 }}">
                 <th scope="row"> Nov </th>
                 <td class="november"><span class="data"> $ 30K </span></td>
             </tr>
             <!--December-->
-            <tr style="--size: 0.3">
+            <tr style="--size: {{ all_monthly_sales.11 }}">
                 <th scope="row"> Dec </th>
                 <td class="december"><span class="data"> $ 30K </span></td>
             </tr>
