--- a/ALLProject/reports/templates/reports/partials/sales_transactions.html
+++ b/ALLProject/reports/templates/reports/partials/sales_transactions.html
@@ -2,15 +2,28 @@
 {% load static %}
 {% block transactions %}
     <link rel = "stylesheet" href="{% static 'css/sales_transactions.css' %}">
-    {% comment %} SELECT * FROM pos_payment
-WHERE timeStamp like "2025-06-03%" {% endcomment %}
 
     <div id="transaction-box">
         <h2 class="boxTitle">Transactions</h2>
-        <button class="transac-switch">
-            <p class="periods monthly">Monthly</p>
-            <p class="periods daily">Daily</p>
-        </button>
+        {% if month_or_day == "month" %}
+            <form action="" method="post" style="margin:0;">
+                {% csrf_token %}
+                <input type="hidden" name="change-daily" value=1>
+                <button type="submit" class="transac-switch">
+                    <p class="periods monthly">Monthly</p>
+                    <p class="periods daily">Daily</p>
+                </button>
+            </form>
+        {% else %}
+            <form action="" method="post" style="margin:0;">
+                {% csrf_token %}
+                <input type="hidden" name="change-monthly" value=1>
+                <button type="submit" class="transac-switch">
+                    <p class="periods changed-monthly">Monthly</p>
+                    <p class="periods changed-daily">Daily</p>
+                </button>
+            </form>
+        {% endif %}
 
         <div id="transac-details">
             <table class="transac-table">
@@ -45,7 +58,10 @@ WHERE timeStamp like "2025-06-03%" {% endcomment %}
             </table>
         </div>
         
-        <h3 id="transac-total"> Total: </h3>
-        <button class="prints"> Print </button>
+        <div id="transac-total-box">
+            <h3 id="transac-total"> Total: </h3>
+            <h3 id="revenue">RM {{total_revenue}}</h3>
+        </div>
+        <button class="prints" id="transac-print"> Print </button>
     </div>
 {% endblock transactions %}
