--- a/ALLProject/users/templates/users/user_list.html
+++ b/ALLProject/users/templates/users/user_list.html
@@ -44,6 +44,6 @@
         </div>
         <div class="editBtn-box">
             <button type="button" class="editBtn add" onclick="add_user()"> Add User </button>
-            <button type="button" class="editBtn del"> Delete User </button>
+            {% comment %} <button type="button" class="editBtn del"> Delete User </button> {% endcomment %}
         </div>
     </body>
