--- a/ALLProject/static/css/user_list.css
+++ b/ALLProject/static/css/user_list.css
@@ -369,6 +369,7 @@ input.addUser {
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
 }
 
 #actual-info form{
@@ -377,6 +378,7 @@ input.addUser {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    padding: 0 1.5vw 0 1.5vw;
 }
 
 .form-input {
@@ -392,25 +394,131 @@ input.addUser {
     width: 25vw;
     height: 5vh;
     margin-bottom: 2vh;
+    font-size: 2.5vh;
+    padding-left: 0.5vw;
+    font-family: "Mukta Mahee", sans-serif;
 }
 
 .form-label {
     font-size: 20px;
 }
 
-#actual-info button {
-    width: 50%;
-    height: 8%;
+#button-container {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 6vh;
+    padding-bottom: 2vh;
+}
+
+#button-container button {
+    width: 10vw;
+    height: fit-content;
     background: #C3B299;
     border-radius: 20px;
     font-family: "Mukta Mahee", sans-serif;
     font-weight: 800;
     font-size: 1vw;
     font-style: normal;
-    margin-bottom: 5vh;
+    padding: 0.5vh 0 0.5vh 0;
+    margin: 0 0.5vw 0 0.5vw;
 }
 
 #actual-info button:hover {
     color: #FFF;
     background: #815355;
+}
+
+.helptext {
+    font-size: 0.8vw;
+}
+
+.form-field {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    width: 100%;
+    margin-bottom: 1vh;
+}
+
+.form-field h3 {
+    margin: 0;
+    font-size: 1.5vw;
+}
+
+.form-field p {
+    margin-top: 0;
+    margin-bottom: 0.5vh;
+    word-break: break-all;
+    white-space: normal;
+}
+
+.info-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 1.5vw 0 1.5vw;
+}
+
+.info-field h3 {
+    margin: 0;
+    font-size: 1.5vw;
+}
+
+.info-field p{
+    border: none;
+    background-color: #f8ece4;
+    border-radius: 3px;
+    width: 25vw;
+    height: 5vh;
+    margin-bottom: 2vh;
+    font-size: 2.5vh;
+    padding-left: 0.5vw;
+    font-family: "Mukta Mahee", sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-flow: column;
+  width: 460px;
+  height: 340px;
+  background-color: white;
+  margin: 20px;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.container p {
+  text-align: center;
+}
+
+.button-row {
+  display: flex;
+  justify-content: center;
+}
+
+.button-row button {
+  width: 162px;
+  height: 50px;
+  border: none;
+  border-radius: 40px;
+  background: #DBEBC0;
+  margin: 5px;
+  font-size: 20px;
+}
+
+.button-row button:hover {
+  background: #bdcaa6; 
+}
+
+#delete-button {
+  background: #E8656A;
+  color: white;
+}
+
+#delete-button:hover {
+  background: #c7575b; 
 }
