--- a/ALLProject/reports/static/css/sales_transactions.css
+++ b/ALLProject/reports/static/css/sales_transactions.css
@@ -12,7 +12,7 @@
 
 #transac-details {
     width: 95%;
-    height: calc(80% - 2em);
+    height: calc(80% - 6vh);
     margin-left: 2.5%;
     margin-right: 2.5%;
 }
@@ -92,7 +92,7 @@ tbody.transac-table {
 #transac-total-box {
     position: absolute;
     display: flex;
-    bottom: 40px;
+    bottom: 8vh;
     width: 100%;
     height: 40px;
     justify-content: space-between;
@@ -117,5 +117,12 @@ tbody.transac-table {
 
 #transac-print {
     position: absolute;
-    bottom: 10px;
+    bottom: 1.5vh;
+    left: 35%;
+
+    width: fit-content;
+    padding-top: 1vh;
+    padding-bottom: 4.5vh;
+    padding-left: 3vh;
+    padding-right: 3vh;
 }
