--- a/ALLProject/reports/templates/reports/partials/sales_transactions.html
+++ b/ALLProject/reports/templates/reports/partials/sales_transactions.html
@@ -65,7 +65,7 @@
         <form action="" method="post" id="sales_report">
             {% csrf_token %}
             {{sales_report}}
-            <button type="submit" class="prints" id="transac-print"> Print </button>
+            <button type="submit" class="prints" id="transac-print"> Print Monthly/Daily Sales </button>
         </form>
     </div>
 {% endblock transactions %}
