--- a/ALLProject/pos/static/css/view_history.css
+++ b/ALLProject/pos/static/css/view_history.css
@@ -47,7 +47,121 @@ h5 {
     box-shadow: 4px 2px 4px gray;
 }
 
-.filter {
+.filter-bar {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.filter-option{
+    width: fit-content;
+    height: 100%;
+    padding-left: 2%;
+    padding-right: 3%;
+    display: flex;
+}
+
+.logo {
+    width: 1.5em;
+    height: 1.5em;
+    padding-left: 1em;
+    align-self: center;
+}
+
+.filter-title {
+    margin: 0;
+    align-self: center;
+}
+
+.filter-date-box {
+    position: fixed;
+    top: 15vh;
+    width: 25%;
+    padding-top: 1%;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 1%;
+    background: #FFFBEE;
+    box-shadow: -2px 2px 8px #CFD2CB;
+    visibility: hidden;
+    z-index: 2;
+}
+
+.filter-payment-box {
+    position: fixed;
+    left: 88%;
+    top: 15vh;
+    width: 11%;
+    padding-top: 1%;
+    background: #FFFBEE;
+    box-shadow: -2px 2px 8px #CFD2CB;
+    z-index: 2;
+    visibility: hidden;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+} 
+
+button.filter-date.choice {
+    width: 40%;
+    height: 75%;
+}
+
+.filter-date.fixed button:hover {
+    color: #F5EFD8;
+    background: #828282;
+}
+
+.filter-date.fixed {
+    display: flex;
+    height: 6vh;
+    justify-content: space-between;
+}
+
+.filter-date.fixed button{
+    width: 30%;
+    height: 70%;
+
+    color: #828282;
+    background: #F5EFD8;
+    border-style: none;
+    font-family: "Mukta Mahee", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.filter-date.custom {
+    height: 10vh;
+    border-top-style: solid;
+    border-top-color: #C3B299;
+}
+
+.filter-date.custom {
+    height: 10vh;
+    border-top-style: solid;
+    border-top-color: #C3B299;
+}
+
+.filter-payment-box button {
+    width: 90%;
+    height: 4vh;
+    margin-bottom: 5%;
+    color: #828282;
+    background: #FFFBEE;
+    border-style: none;
+    font-family: "Mukta Mahee", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.filter-payment-box button:hover {
+    color: #000;
+    background: #F5EFD8;
+}
+
+/* .filter {
     display: flex;
     width: 100%;
     height: 43.5%;
@@ -62,7 +176,7 @@ h5 {
     border-right-style: solid;
 }
 
-#filter-title {
+.filter-title {
     margin: 0;
     align-self: center;
 }
@@ -137,8 +251,11 @@ button.filter-date:hover {
     padding-top: 1%;
     background: #FFFBEE;
     box-shadow: -2px 2px 8px #CFD2CB;
-    visibility: hidden;
     z-index: 2;
+} */
+
+.visible {
+    visibility: visible;
 }
 
 ul{
@@ -146,7 +263,7 @@ ul{
     margin: 0;
 }
 
-button.filter-payment {
+/* button.filter-payment {
     width: 90%;
     height: 4vh;
     margin-bottom: 5%;
@@ -161,16 +278,7 @@ button.filter-payment {
 button.filter-payment:hover {
     color: #000;
     background: #F5EFD8;
-}
-
-.filter:hover {
-    .filter-date-box {
-        visibility: visible;
-    }
-    .filter-payment-box {
-        visibility: visible;
-    }
-}
+} */
 
 .history {
     padding-left: 2%;
