--- a/ALLProject/pos/templates/pos/view_history.html
+++ b/ALLProject/pos/templates/pos/view_history.html
@@ -5,15 +5,52 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta+Mahee:wght@200;300;400;500;600;700;800&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <script src="{% static 'js/history.js'%}"></script>
+
 
     <body>
         <div id="main-content">
             <div id="dashboard">
                 <h1>Sales</h1>
-                <div class="filter">
-                    <div class="filter date">
+                <div class="filter-bar">
+                    <div class="filter-option" id="date-filter-selection">
+                        <h3 class="filter-title" id="date-filter-title">Past 100 Days</h3>
+                        <img src="{% static 'images/arrow-down.png' %}" class="logo dropdown">
+                    </div>
+
+                    <div class="filter-option" id="payment-filter-selection">
+                        <h3 class="filter-title"> Filter </h3>
+                        <img src="{% static 'images/adjust.png'%}" class="logo filter">
+                    </div>
+                </div>
+
+                 <div class="filter-date-box">
+                    <div class="filter-date fixed">
+                        <button type="button" onclick="filter_by_date('today')"> Today </button>
+                        <button type="button" onclick="filter_by_date('week')"> Last 7 days </button>
+                        <button type="button" onclick="filter_by_date('month')"> This Month </button>
+                    </div>
+                    <div class="filter-date custom">
+                        <h4>Custom Date Range</h4>
+                        <div style="display: flex;justify-content: space-evenly;align-items: center; width: 100%; height: 70%;">
+                            <input type="date" class="filter-date choice" id="start-date"></input>
+                            <span class="filter-date middle"> - </span>
+                            <input type="date" class="filter-date choice" id="end-date"> </input>
+                        </div>
+                    </div>
+                </div>
+                <div class="filter-payment-box">
+                    <button type="button" onclick="filter_payment('Credit Card')">Credit Card</button>
+                    <button type="button" onclick="filter_payment('Debit Card')">Debit Card</button>
+                    <button type="button" onclick="filter_payment('DuitNow')">DuitNow</button>
+                    <button type="button" onclick="filter_payment('Cash')">Cash</button>
+                    <button type="button" onclick="filter_payment('Others')">Others</button>
+                </div>
+
+                {% comment %} <div class="filter">
+                    <div class="filter date" id="date-filter-selection">
                         <h3 id="filter-title">20 APRIL 2025 - 20 MAY 2025</h3>
-                        <img src="assets/arrow-down.png" class="logo dropdown">
+                        <img src="{% static 'images/arrow-down.png' %}" class="logo dropdown">
                     </div>
                     <div class="filter-date-box">
                         <div class="filter-date fixed">
@@ -24,15 +61,15 @@
                         <div class="filter-date custom">
                             <h4>Custom Date Range</h4>
                             <div style="display: flex;justify-content: space-evenly;align-items: center; width: 100%; height: 70%;">
-                                <button type="button" class="filter-date choice"> Start Date </button>
+                                <input type="text" class="filter-date choice" placeholder="Start Date"></input>
                                 <span class="filter-date middle"> - </span>
-                                <button type="button" class="filter-date choice"> End Date </button>
+                                <input type="text" class="filter-date choice" placeholder="End Date"> </input>
                             </div>
                         </div>
                     </div>
-                    <div class="filter payment-type">
+                    <div class="filter payment-type" id="payment-filter-selection">
                         <h3 id="filter-title"> Filter </h3>
-                        <img src="assets/adjust.png" class="logo filter">
+                        <img src="{% static 'images/adjust.png'%}" class="logo filter">
                     </div>
                     <div class="filter-payment-box">
                         <ul>
@@ -43,88 +80,15 @@
                             <button type="button" class="filter-payment">Others</button>
                         </ul>
                     </div>
-                </div>
+                </div> {% endcomment %}
             </div>
-            <div class="history">
-                <div class="day">
-                    <h4 class="day title">20 APRIL 2025</h4>
-                    <div class="day transactions">
-                        <h3>20 APRIL 2025, 14:00:52</h3>
-                        <h3>100023456</h3>
-                        <h3>Purchased 20 Items</h3>
-                        <h3>Credit Card</h3>
-                        <h3>RM 102.20</h3>
-                    </div>
-                    <div class="day transactions">
-                        <h3>20 APRIL 2025, 14:00:52</h3>
-                        <h3>100023456</h3>
-                        <h3>Purchased 20 Items</h3>
-                        <h3>Credit Card</h3>
-                        <h3>RM 102.20</h3>
-                    </div>
-                    <div class="day transactions">
-                        <h3>20 APRIL 2025, 14:00:52</h3>
-                        <h3>100023456</h3>
-                        <h3>Purchased 20 Items</h3>
-                        <h3>Credit Card</h3>
-                        <h3>RM 102.20</h3>
-                    </div>
-                </div>
-                <div class="day">
-                    <h4 class="day title">19 APRIL 2025</h4>
-                    <div class="day transactions">
-                        <h3>20 APRIL 2025, 14:00:52</h3>
-                        <h3>100023456</h3>
-                        <h3>Purchased 20 Items</h3>
-                        <h3>Credit Card</h3>
-                        <h3>RM 102.20</h3>
-                    </div>
-                    <div class="day transactions">
-                        <h3>20 APRIL 2025, 14:00:52</h3>
-                        <h3>100023456</h3>
-                        <h3>Purchased 20 Items</h3>
-                        <h3>Credit Card</h3>
-                        <h3>RM 102.20</h3>
-                    </div>
-                </div>
-                <div class="day">
-                    <h4 class="day title">19 APRIL 2025</h4>
-                    <div class="day transactions">
-                        <h3>20 APRIL 2025, 14:00:52</h3>
-                        <h3>100023456</h3>
-                        <h3>Purchased 20 Items</h3>
-                        <h3>Credit Card</h3>
-                        <h3>RM 102.20</h3>
-                    </div>
-                </div>
-                <div class="day">
-                    <h4 class="day title">19 APRIL 2025</h4>
-                    <div class="day transactions">
-                        <h3>20 APRIL 2025, 14:00:52</h3>
-                        <h3>100023456</h3>
-                        <h3>Purchased 20 Items</h3>
-                        <h3>Credit Card</h3>
-                        <h3>RM 102.20</h3>
-                    </div>
-                    <div class="day transactions">
-                        <h3>20 APRIL 2025, 14:00:52</h3>
-                        <h3>100023456</h3>
-                        <h3>Purchased 20 Items</h3>
-                        <h3>Credit Card</h3>
-                        <h3>RM 102.20</h3>
-                    </div>
-                    <div class="day transactions">
-                        <h3>20 APRIL 2025, 14:00:52</h3>
-                        <h3>100023456</h3>
-                        <h3>Purchased 20 Items</h3>
-                        <h3>Credit Card</h3>
-                        <h3>RM 102.20</h3>
-                    </div>
-                </div>
+            
+            <div class="history" id="history-list">
+                {% include 'partials/history_partial.html' %}
             </div>
 
             <div class="transact-detail">
-                <button type="button" id="close-box"><img src="assets/back-arrow.png" alt="back-arrow" id="close"></button>
+                <button type="button" id="close-box"><img src="{% static 'images/back-arrow.png'%}" alt="back-arrow" id="close"></button>
                 <div class="container">
                     <h3>Created on 21 April 2025</h3>
                     <h3>Receipt Number: 100024000</h3>
