--- a/ALLProject/reports/static/css/sales_transactions.css
+++ b/ALLProject/reports/static/css/sales_transactions.css
@@ -126,3 +126,139 @@ tbody.transac-table {
     padding-left: 3vh;
     padding-right: 3vh;
 }
+
+.dimmer-error {
+    position: absolute;
+    left: 0;
+    z-index: 4;
+
+    width: 100%;
+    height: 201vh;
+    
+    background: #000;
+    opacity: 0.5;
+    visibility: visible;
+}
+
+#error-box {
+    position: fixed;
+    align-self: anchor-center;
+    left: 30%;
+    z-index: 5;
+
+    width: 80vh;
+    height: 30vh;
+    background-color: #FFF7EB;
+    border-radius: 20px;
+}
+
+#close-error {
+    float: right;
+    margin-top: 10px;
+    margin-right: 10px;
+    width: 30px;
+    height: 30px;
+
+    background-color: #DAE0D3;
+    color: #000;
+    border-radius: 10px;
+    border-style: none;
+}
+#close-error:hover {
+    background-color: #a6af9c;
+}
+
+#error-title {
+    margin-top: 1%;
+    margin-bottom: 1%;
+    position: static;
+    text-align: center;
+    justify-self: center;
+    width: 95%;
+    font-weight: 500;
+    font-size: 1.2vw;
+}
+
+#error-msg {
+    position: static;
+    text-align: center;
+    align-content: center;
+    justify-self: center;
+    width: 95%;
+    height: 75%;
+
+    font-family: "Mukta Mahee", sans-serif;
+    font-weight: 700;
+    font-size: 2vw;
+    color: #E8656A;
+    letter-spacing: 2px;
+    line-height: 30px;
+}
+
+.dimmer-success {
+    position: absolute;
+    left: 0;
+    z-index: 4;
+
+    width: 100%;
+    height: 201vh;
+    
+    background: #000;
+    opacity: 0.5;
+    visibility: visible;
+}
+
+#success-box {
+    position: fixed;
+    align-self: anchor-center;
+    left: 30%;
+    z-index: 5;
+
+    width: 80vh;
+    height: 30vh;
+    background-color: #FFF7EB;
+    border-radius: 20px;
+}
+
+#close-success {
+    float: right;
+    margin-top: 10px;
+    margin-right: 10px;
+    width: 30px;
+    height: 30px;
+
+    background-color: #DAE0D3;
+    color: #000;
+    border-radius: 10px;
+    border-style: none;
+}
+#close-success:hover {
+    background-color: #a6af9c;
+}
+
+#success-title {
+    margin-top: 1%;
+    margin-bottom: 1%;
+    position: static;
+    text-align: center;
+    justify-self: center;
+    width: 95%;
+    font-weight: 500;
+    font-size: 1.5vw;
+}
+
+#success-msg {
+    position: static;
+    text-align: center;
+    align-content: center;
+    justify-self: center;
+    width: 95%;
+    height: 75%;
+
+    font-family: "Mukta Mahee", sans-serif;
+    font-weight: 700;
+    font-size: 2vw;
+    color: #E8656A;
+    letter-spacing: 2px;
+    line-height: 30px;
+}
