--- a/ALLProject/reports/templates/reports/partials/sales_transactions.html
+++ b/ALLProject/reports/templates/reports/partials/sales_transactions.html
@@ -2,13 +2,14 @@
 {% load static %}
 {% block transactions %}
     <link rel = "stylesheet" href="{% static 'css/sales_transactions.css' %}">
+    <script src="{% static "js/alert.js" %}"></script>
 
     <div id="transaction-box">
         <h2 class="boxTitle">Transactions</h2>
         {% if month_or_day == "month" %}
             <form action="" method="post" style="margin:0;">
                 {% csrf_token %}
-                <input type="hidden" name="change-daily" value=1>
+                <input type="hidden" name="change-monthly" value=0>
                 <button type="submit" class="transac-switch">
                     <p class="periods monthly">Monthly</p>
                     <p class="periods daily">Daily</p>
@@ -68,4 +69,34 @@
             <button type="submit" class="prints" id="transac-print"> Print Monthly/Daily Sales </button>
         </form>
     </div>
+    
+    {% if messages %}
+        {% for message in messages %}
+            {% if message.tags == 'error' %}
+                <div id="error-container">
+                    <div class="dimmer-error"></div>
+
+                    <div id="error-box">
+                        <button type="button" id="close-error">X</button>
+
+                        <p id="error-title">ERROR / ALERT</p>
+                        <p id="error-msg">{{ message }}</p>
+                    </div>
+                </div>
+
+            {% elif message.tags == 'success' %}
+                <div id="success-container">
+                    <div class="dimmer-success"></div>
+
+                    <div id="success-box">
+                        <button type="button" id="close-success">X</button>
+
+                        <p id="success-title">UPDATE SUCCESS</p>
+                        <p id="success-msg">{{ message }}</p>
+                    </div>
+                </div>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+
 {% endblock transactions %}
