--- a/ALLProject/inventory/static/inventory/product_list.css
+++ b/ALLProject/inventory/static/inventory/product_list.css
@@ -20,7 +20,7 @@ main {
 .container {
   margin: 0;
   padding: 0;
-  width: 900px;
+  width: 59vw;
   min-height: 100vh;
   background-color: white;
   box-sizing: border-box;
@@ -34,10 +34,11 @@ main {
   justify-content: space-between;
   background-color: white;
   width: 100%;
-  height: 100px;
+  height: 15vh;
   border-bottom: 1px solid;
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 
 .list-subheader{
@@ -47,51 +48,66 @@ main {
 }
 
 .list-subheader p {
-  margin-top: 15px;
-  padding-left: 20px;
+  margin-top: 1vw;
+  padding-left: 1.2vw;
+  font-size: 1vw;
 }
 
 .list-subheader h1 {
-  padding-left: 20px;
+  padding-left: 1.2vw;
+  font-size: 1.6vw;
 }
 
 .list-filter {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  width: fit-content;
+  height: 100%;
 }
 
 .list-filter form {
-  padding: 24px;
+  padding: 1vw;
   display: flex;
   gap: 20px;
 }
 
-.list-filter button {
-  border: none;
-  background-color: white;
-  width: 40px;
-  height: 40px;
+.list-filter select{
+  width: 6.5vw;
+  aspect-ratio: 3/1;
+  font-size: 1vw;
+}
+
+.list-filter img {
+  width: 2.5vw;
+  aspect-ratio: 1/1;
 }
 
 .list-body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  margin-top: 20px;
+  margin-top: 2vh;
 }
 
 .product {
-  width:262px;
-  height: 210px;
+  width: 17vw;
+  /* height: 210px; */
+  aspect-ratio: 262/210;
   background-color: #C3B299;
-  margin: 10px 18px 10px 18px;
+  margin: 2vh 1vw 2vh 1vw;
   border: 1px solid #BCBCBC;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: flex-end;
+}
+
+.top-section {
+  width: 100%;
+  height: 82%;
   background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
 }
 
 a.fill-div {
@@ -109,43 +125,43 @@ a.fill-div {
   background-color: #815355;
   box-sizing: border-box;
   border: 1px solid white;
-  border-radius: 20px;
+  border-radius: 1vw;
   height: auto;
-  width: auto;
+  width: fit-content;
   margin: 8px;
 }
 
 .product-stock p{
   color: #E3D4BE;
-  font-size: 10px;
+  font-size: 0.8vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   text-align: center;
-  margin: 4px;
+  margin: 0.3vw;
 }
 
 .product-name {
   background-color: white;
   width: 100%;
-  height: 40px;
+  height: 18%;
 }
 
 .product-name h3{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 16px;
+  font-size: 1vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  padding-left: 5px;
+  padding-left: 0.5vw;
 }
 
 .product-name p{
-  font-size: 12px;
+  font-size: 0.8vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  padding-left: 5px;
+  padding-left: 0.5vw;
 }
 
 #add-product {
@@ -156,13 +172,13 @@ a.fill-div {
   justify-content: center;
 }
 
-#add-product a {
-  width: 184px;
-  height: 40px;
+#add-product button {
+  width: 12vw;
+  height: 6vh;
   border-radius: 15px;
   border: 1px solid #699027;
-  background: #CDE7A1; 
-  font-size: 15px;
+  background: #CDE7A1;  
+  font-size: 1vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -170,7 +186,7 @@ a.fill-div {
   text-decoration: none;
 }
 
-#add-product a:hover {
+#add-product button:hover {
   background: #99ad78; 
 }
 
@@ -178,6 +194,8 @@ a.fill-div {
   display: flex;
   flex-direction: column;
   position: fixed;
+  justify-content: center;
+  height: 100%;
 }
 
 .default-message {
@@ -195,8 +213,8 @@ a.fill-div {
 .product-details {
   display: flex;
   flex-flow: column;
-  width: 460px;
-  height: 340px;
+  width: 30vw;
+  height: 50vh;
   background-color: white;
   border-radius: 5%;
   margin: 20px;
@@ -230,8 +248,8 @@ a.fill-div {
 }
 
 .qr-details {
-  width: 460px;
-  height: 280px;
+  width: 30vw;
+  height: 40vh;
   background-color: white;
   border-radius: 5%;
   margin: 0px 20px 20px 20px;
@@ -279,4 +297,178 @@ a.fill-div {
 
 #delete-button:hover {
   background: #c7575b; 
+}
+.product-form {
+  display: flex;
+  flex-flow: column;
+  width: 460px;
+  background-color: white;
+  border-radius: 5%;
+  margin: 20px;
+  box-shadow: 0px 1px 5px #828282;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  overflow: hidden;
+}
+
+.product-image {
+  background-color: #C3B299;
+  width: 300;
+  height: 200;
+  margin-bottom: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.product-form form{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.product-form h1 {
+  text-align: center;
+  margin: 10px;
+}
+
+.form-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100%;
+  height: 100px;
+}
+
+.form-buttons a{
+  width: 150px;
+  height: 40px;
+  border-radius: 15px;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  text-decoration: none;
+  background-color: #e8f4d4;
+  margin: 0 10px 20px 10px;
+}
+
+.form-buttons button{
+  width: 150px;
+  height: 40px;
+  border-radius: 15px;
+  border: none;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px 20px 10px;
+  background-color: #e8f4d4;
+}
+
+#back {
+  background: #f8b4b4; 
+}
+
+#back:hover {
+  background: #E8656A; 
+}
+
+.form-buttons button:hover {
+  background: #CDE7A1; 
+}
+
+form {
+  width: 100%;
+}
+
+.all-fields {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.field-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin: 5px 0 5px 0;
+}
+
+.field-wrapper select {
+  width: 240px;
+  height: 30px;
+  background-color: #f8ece4;
+  border: none;
+  border-radius: 5px;
+  font-size: 22px;
+}
+
+.form-control {
+  width: 240px;
+  height: 30px;
+  background-color: #f8ece4;
+  border: none;
+  border-radius: 5px;
+  font-size: 22px;
+} 
+
+.delete-container {
+  display: flex;
+  flex-flow: column;
+  width: 460px;
+  height: 340px;
+  background-color: white;
+  border-radius: 5%;
+  margin: 20px;
+  box-shadow: 0px 1px 5px #828282;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.delete-container p {
+  text-align: center;
+}
+
+.button-row {
+  display: flex;
+  justify-content: center;
+}
+
+.button-row button {
+  width: 162px;
+  height: 50px;
+  border: none;
+  border-radius: 40px;
+  background: #DBEBC0;
+  margin: 5px;
+  font-size: 20px;
+}
+
+.button-row button:hover {
+  background: #bdcaa6; 
+}
+
+/* #delete-button {
+  background: #E8656A;
+  color: white;
+}
+
+#delete-button:hover {
+  background: #c7575b; 
+} */
+
+.stock-alert {
+  z-index: 1;
+  position: relative;
+  bottom: 1vw;
+  left: 1vw;
+  height: 0;
+}
+
+.stock-alert img{
+  width: 2vw;
 }
