--- a/ALLProject/inventory/templates/inventory/product_delete.html
+++ b/ALLProject/inventory/templates/inventory/product_delete.html
@@ -1,24 +1,11 @@
-{% load static %}
-
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href="{% static 'css/product_delete.css' %}">
-    <link href="https://fonts.googleapis.com/css2?family=Mukta+Mahee:wght@200;300;400;500;600;700;800&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-    <title>Delete product?</title>
-</head>
-<body>
-    <div class="container">
-        <h2>Delete {{product.name}}?</h2>
-        <p>Do you want to delete this product? <strong>Deleted products are permanently gone.</strong></p>
-        <div class="button-row">
-            <form method="POST">
-                {%csrf_token%}
-                <button onclick="window.location.href='{% url 'product_list' %}'">Cancel</button>
-                <button id="delete-button" type="submit">Confirm</button>
-            </form>
-        </div>
+<div class="delete-container">
+    <h2>Delete {{product.name}}?</h2>
+    <p>Do you want to delete this product? <strong>Deleted products are permanently gone.</strong></p>
+    <div class="button-row">
+        <form method="POST" action="{% url 'product_delete' product.id%}">
+            {%csrf_token%}
+            <button name="action" value="cancel">Cancel</button>
+            <button id="delete-button" type="submit" name="action" value="confirm">Confirm</button>
+        </form>
     </div>
-</body>
-</html>
+</div>
